add Trial subscription
